--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         <nav class='nav'>
             <ion-icon class='btn prev' name="arrow-back-outline"></ion-icon>
             <ion-icon class='btn next' name="arrow-forward-outline"></ion-icon>
+            <div class="audio-controls">
+                <button id="playPauseBtn">Play</button>
+                <audio id="audioPlayer" controls>
+                    <source src="tune.mp3" type="audio/mp3">
+                </audio>
+            </div>
         </nav>
     </main>
     
